--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.3"
+  },
+  "dependencies": {
+    "style-loader": "^3.3.1"
   }
 }
